--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,9 @@
                 <version>3.2.0</version>
                 <configuration>
                     <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
+                    <additionalOptions>
+                        <additionalOption>-public</additionalOption>
+                    </additionalOptions>
                 </configuration>
             </plugin>
         </plugins>
